# scanfix

./: .env.example  .gitignore  README.md  pyproject.toml
scanfix/: __init__.py  cli.py  config.py  models.py
scanfix/agent/: fixer.py
scanfix/memory/: context.py  store.py
scanfix/output/: github.py  reporter.py
scanfix/scanner/: analyzer.py  chunker.py  reviewer.py  walker.py
tests/: test_memory.py  test_models.py  test_scanner.py
